test/MC/SVE/regression-tests/negative_tests/sve-st3b-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8E3Store1LSSZ
// Offset register Rm cannot be xzr
st3b {z30.b, z31.b, z0.b}, p1, [x18, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
